[package]
name = "torrent"
version = "0.1.0"
authors = ["Peter Kelly <peter@pmkelly.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { version = "0.2.0", features = ["aead", "digest"] }
tokio = { version = "1.0.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
bytes = "1.0.1"
futures = "0.3.15"
rand = "0.7.0"
openssl-sys = "0.9.60"
openssl = "0.10.32"
ring = { version = "0.16", features = ["alloc", "dev_urandom_fallback", "std"] }
sha-1 = "0.9.5"
sha2 = "0.9.4"
hmac = "0.11.0"
hkdf = "0.11.0"
generic-array = "0.14.4"
aes-gcm = "0.9.1"
clap = "3.0.0-beta.4"
rsa = "0.4.0"
rand_chacha = "0.3.0"
ed25519-dalek = "1.0.1"
blake2 = "0.9.1"
