[package]
name = "torrent"
version = "0.1.0"
authors = ["Peter Kelly <peter@pmkelly.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { version = "0.4.0", features = ["aead", "digest"] }
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.3.0"
futures = "0.3.25"
rand = "0.8.5"
rand_old = {package = "rand", version = "0.7.0" }
openssl-sys = "0.9.78"
openssl = "0.10.43"
ring = { version = "0.16.20", features = ["alloc", "dev_urandom_fallback", "std"] }
sha-1 = "0.10.1"
sha2 = "0.10.6"
hmac = "0.12.1"
hkdf = "0.12.3"
generic-array = "0.14.6"
aes-gcm = "0.10.1"
clap = { version = "4.0.29", features = ["derive"] }
rsa = "0.7.2"
rand_chacha = "0.3.1"
ed25519-dalek = { version = "1.0.1", features = ["rand_core"] }
blake2 = "0.10.5"
quinn = "0.9.2"
rustls = { version = "0.20.7", features = ["quic", "dangerous_configuration"] }
typenum = "1.15.0"
